# PhoneAgent

./: .gitignore  COMPARISON_MIDSCENE.md  LICENSES_THIRD_PARTY.md  MULTI_DEVICE_MANAGEMENT.md  NOTICE  PROJECT_ASSESSMENT.md  README.md  README_EN.md  ROADMAP.md  SELF_HOSTED_MODEL.md  env.example  privacy_policy.txt  pyproject.toml  reproduce_issue.py  verify_fix.py
.github/workflows/: ci.yml
client/: install_termux.sh  phoneagent
docs/: COMPARISON_MIDSCENE.md  DEPLOYMENT.md  ROADMAP.md  SELF_HOSTED_MODEL.md
phone_agent/: __init__.py  agent.py
phone_agent/actions/: handler.py
phone_agent/adb/: __init__.py  anti_detection.py  app_discovery.py  connection.py  device.py  input.py  screenshot.py  smart_input.py  ui_hierarchy.py  xml_tree.py  yadb.py
phone_agent/config/: __init__.py  app_manager.py  apps.py  prompts.py
phone_agent/core/: device_init.py
phone_agent/kernel/: __init__.py  callback.py  hybrid_agent.py  xml_agent.py
phone_agent/logging/: __init__.py  base_logger.py  task_logger.py
phone_agent/model/: client.py  selector.py
phone_agent/model/parsers/: __init__.py  autoglm_parser.py  base_parser.py  factory.py
phone_agent/model/providers/: __init__.py  base.py  registry.py  zhipu_provider.py
phone_agent/planning/: __init__.py  executor.py  planner.py  prompts.py
phone_agent/preprocessing/: __init__.py  rule_engine.py  task_preprocessor.py
phone_agent/utils/: stabilizer.py
scripts/install/: install_server.sh
scripts/server/: start.sh
server/: __init__.py  config.py  logging_config.py
server/api/: __init__.py  anti_detection_config.py  app.py  app_config_routes.py  model_stats.py  planning.py  presets.py  routes.py  scrcpy.py  shortcuts.py  speech_api.py
server/api/schemas/: __init__.py  device.py  task.py
server/database/: __init__.py  crud.py  models.py  session.py
server/middleware/: request_logger.py  timeout_monitor.py
server/services/: __init__.py  agent_service.py  device_pool.py  device_scanner.py  model_call_tracker.py  port_manager.py  scrcpy_manager.py
server/tasks/: cleanup.py
server/utils/: __init__.py  image_utils.py  log_sanitizer.py  model_config_helper.py  zhipu_client.py
server/websocket/: __init__.py  connection_manager.py  server.py
tests/: conftest.py  test_agent_async.py  test_model_client.py  verify_fix.py
web/: vite.config.js
web/src/api/: index.js  request-monitor.js
web/src/components/: LivePreview.vue  LivePreviewH264.vue  TaskRealTimePreview.vue  TopNavigation.vue
web/src/stores/: websocket.js
web/src/views/: Home.vue  Tasks.vue
